Bug 160681 - White background comment box drop down button in Draw
Summary: White background comment box drop down button in Draw
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
7.5 all versions
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:25.2.0 target:24.8.0.0.beta2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: ImpressDraw-Comments
  Show dependency treegraph
 
Reported: 2024-04-15 20:08 UTC by Telesto
Modified: 2024-06-17 10:35 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot (22.67 KB, image/jpeg)
2024-04-15 20:08 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2024-04-15 20:08:48 UTC
Description:
White background comment box drop down button in Draw

Steps to Reproduce:
1. Open Draw
2. Insert -> Comment 


Actual Results:
White background

Expected Results:
Yellowish (same as Writer)


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 748561425774fa40ab685fed80d113f7e8301158
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL threaded
Comment 1 Telesto 2024-04-15 20:08:57 UTC
Created attachment 193698 [details]
Screenshot
Comment 2 Telesto 2024-04-15 20:12:02 UTC
Also in
Version: 7.5.6.0.0+ (X86_64) / LibreOffice Community
Build ID: f0e825382a76d685998be702ed551a00b73476a5
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL threaded

reasonable fine (but still not totally fine) with
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 4bb730be0909d9cf55b7a44d7e916aa5de16b9f7
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL

expected:
Version: 7.1.8.0.0+ (x64) / LibreOffice Community
Build ID: a94b58277c7aeaa83ce14347cd0b8f7137969d03
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 3 m_a_riosv 2024-04-16 20:06:47 UTC
Reproducible
Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: faadf7c15593521c0ebceb043f82f916ee5ccf9d
CPU threads: 16; OS: Windows 10.0 Build 22631; UI render: default; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Comment 4 Kira Tubo 2024-06-07 02:36:41 UTC
Bibisected on win64-7.5. Adding Caolán McNamara to cc

Regression first introduced at: 
https://git.libreoffice.org/core/+/f61b6a3a23303aff75051bc704375db92ae8f345

commit f61b6a3a23303aff75051bc704375db92ae8f345	[log]
author	Caolán McNamara <caolanm@redhat.com>	Wed Oct 05 12:47:33 2022 +0100
committer	Caolán McNamara <caolanm@redhat.com>	Wed Oct 05 15:53:08 2022 +0200
tree 184b5c2430af76115df4366e643c7220905a195c
parent 4006b855cc94fbd817f9c19d7361b5d6a06d152e [diff]

---------------------

Reproduced on: 

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 67dc0edb688d345607ae6afe3ad849f143804e28
CPU threads: 6; OS: Windows 11 (10.0 build 22631); UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded

Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: f61b6a3a23303aff75051bc704375db92ae8f345
CPU threads: 6; OS: Windows 10.0 Build 22631; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 5 Caolán McNamara 2024-06-16 20:22:56 UTC
https://gerrit.libreoffice.org/c/core/+/168969 for this
Comment 6 Commit Notification 2024-06-17 07:40:28 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/25bd91293cd3ac7bf24f491e8eab254aa78d9fcb

Resolves: tdf#160681 draw impress comment similarly to how writer does it

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2024-06-17 10:35:01 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/2f5c7550f2eb117fb890d94bf0ed492ad5c7989a

Resolves: tdf#160681 draw impress comment similarly to how writer does it

It will be available in 24.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.