Resolves: tdf#160681 draw impress comment similarly to how writer does it

so we get the same filled MenuButton in both applications

Change-Id: Iea41a17285287ec2794e4cdce6eaae0906fff291
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168969
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168989